--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,8 @@
   ],
   "hints": {
     "typescript-config/is-valid": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "button-type": "off",
+    "axe/name-role-value": "off"
   }
 }
